@@ -21,27 +21,21 @@
 <p class="system-message-title">System Message: WARNING/2 (<tt class="docutils">functional/input/dangerous.txt</tt>, line 4)</p>
 <p>&quot;raw&quot; directive disabled.</p>
 <pre class="literal-block">
-.. raw:: html
-   :file: /etc/passwd
+.. raw:: html<br /> &nbsp; :file: /etc/passwd
 </pre>
 </div>
 <div class="system-message">
 <p class="system-message-title">System Message: WARNING/2 (<tt class="docutils">functional/input/dangerous.txt</tt>, line 6)</p>
 <p>&quot;raw&quot; directive disabled.</p>
 <pre class="literal-block">
-.. raw:: html
-   :url: file:///etc/passwd
+.. raw:: html<br /> &nbsp; :url: file:///etc/passwd
 </pre>
 </div>
 <div class="system-message">
 <p class="system-message-title">System Message: WARNING/2 (<tt class="docutils">functional/input/dangerous.txt</tt>, line 8)</p>
 <p>&quot;raw&quot; directive disabled.</p>
 <pre class="literal-block">
-.. raw:: html
-
-   &lt;script&gt;
-       that does something really nasty
-   &lt;/script&gt;
+.. raw:: html<br /><br /> &nbsp; &lt;script&gt;<br /> &nbsp; &nbsp; &nbsp; that does something really nasty<br /> &nbsp; &lt;/script&gt;
 </pre>
 </div>
 <div class="system-message">
